# Get-Data

./: next.py
market-reader/: main.py  pyproject.toml
money-control/: main.py  pyproject.toml
money-control/data/: money_control_data_2024-02-18.csv
stock-titan/: Makefile  main.py  pyproject.toml
stock-titan/data/: stocktitan_2024-02-19.csv
yahoo-finance/: Makefile  config.py  main.py  next.py  pyproject.toml  stock_market_news_2024-02-18.csv
yahoo-finance/data/: scraped_articles_2024-02-18.csv
