[tool.poetry]
name = "market-reader"
version = "0.1.0"
description = ""
authors = ["FreelancecoderX <157281190+FreelancecoderX@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pandas = "^2.2.0"
polars = "^0.20.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
