[tool.poetry]
name = "yahoo-finance"
version = "0.1.0"
description = ""
authors = ["FreelancecoderX <157281190+FreelancecoderX@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pytest-playwright = "^0.4.4"
bs4 = "^0.0.2"
pandas = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
